[package]
name = "steam_auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const_format = { version = "0.2.30", features = ["rust_1_51"] }
reqwest = { version = "0.11.12", features = ["cookies"] }
